--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@ Eager to leverage my technical background, analytical mindset, and passion for t
 .CSS
 .C
 .PYTHON
+.JavaScript 
+ .Express
+
 </pre>
 <h2>Hobbies:</h2>
 <pre>
