--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@ Eager to leverage my technical background, analytical mindset, and passion for t
 .CSS
 .C
 .PYTHON
-.JavaScript 
- .Express
-
 </pre>
 <h2>Hobbies:</h2>
 <pre>
 .Reading Books
+ .Listening Music
 .surfing Internet
 </pre>
 <h2>Declaration</h2>
