--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ Eager to leverage my technical background, analytical mindset, and passion for t
 </pre>
 <h2>Hobbies:</h2>
 <pre>
-.Reading Books
- .Listening Music
-.surfing Internet
+.Reading Books,
+ .Listening Music,
+.surfing Internet,
 </pre>
 <h2>Declaration</h2>
  I here by declare that above mentioned information is ture and valid to the best of my knowledge.
